Spacing styling fixes

--- a/src/app/components/about-page/about-page.component.css
+++ b/src/app/components/about-page/about-page.component.css
@@ -1,37 +1,37 @@
 :host {
-    display: block;
     height: 100%;
-    min-height: 0;
 }
 
 .about-page-container {
-    height: 100%;
     display: flex;
-    padding: 25px;
+    justify-content: center;
+    height: 100%;
     gap: 25px;
+    padding: 25px;
     box-sizing: border-box;
 }
 
 app-about-card {
-    flex: 1;
     display: flex;
     flex-direction: column;
+    max-width: 500px;
     min-width: 0;
     gap: 25px;
 }
 
 app-resume-card {
-    flex: 2;
-    display: flex;
-    flex-direction: column;
-    min-width: 0;
-    gap: 25px;
+    width: 100%;
+    max-width: 600px;
+    aspect-ratio: 1 / 1.3;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1100px) {
     .about-page-container {
+        display: flex;
         flex-direction: column;
-        overflow-y: auto;
+        justify-content: flex-start;
+        align-items: center;
+        overflow-y:scroll;
     }
 
     app-about-card,
@@ -41,6 +41,7 @@ app-resume-card {
 
     app-resume-card {
         width: 100%;
-        aspect-ratio: 1 / 1.1;
+        max-width: 500px;
+        aspect-ratio: 1 / 1.37;
     }
 }
