--- a/src/app/components/about-page/resume-card/resume-card.component.css
+++ b/src/app/components/about-page/resume-card/resume-card.component.css
@@ -1,7 +1,7 @@
 .mdc-card {
     width: 100%;
     height: 100%;
-    padding: 16px;
+    padding: 25px;
     color: #F0F6FC;
     background-color: #0D1117 !important;
     border: 1px solid #3d444d !important;
